[metadata]
name = teuthology
author = Red Hat, Inc.
version = attr: teuthology.__version__
summary = Ceph test framework
description_file = README.rst
description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/ceph/teuthology
keywords=teuthology, test, ceph, cluster
license = MIT
classifiers =
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Operating System :: POSIX :: Linux
  Programming Language :: Python :: 3.6
  Topic :: Software Development :: Quality Assurance
  Topic :: Software Development :: Testing
  Topic :: System :: Distributed Computing
  Topic :: System :: Filesystems

[options]
packages = find:
install_requires =
  PyYAML
  ansible>=2.8,<2.10
  apache-libcloud
  argparse>=1.2.1
  backports.ssl-match-hostname
  beanstalkc3>=0.4.0
  boto3
  boto>=2.0b4
  configobj
  configparser
  cryptography>=2.7
  docopt
  gevent
  httplib2
  humanfriendly
  ipy
  ndg-httpsclient
  netaddr
  paramiko
  pexpect
  pip-tools
  prettytable
  psutil>=2.1.0
  pyasn1
  pynacl>=1.5.0
  pyopenssl>=0.13
  python-dateutil
  python-novaclient
  python-openstackclient
  requests>2.13.0
  sentry-sdk
  six>=1.9
  toml
  xmltodict

[options.extras_require]
manhole =
  manhole
sentry =
  sentry-sdk
rocketchat =
  rocket-python>=1.2.15
test =
  pytest
  mock
  tox
  boto >= 2.0b4
  cryptography >= 2.7
  pip-tools
  xmltodict
  boto3
  PyJWT
  ipy
  toml

[options.package_data]
teuthology.task.install =
  adjust-ulimits
  daemon-helper
teuthology.task.internal =
  edit_sudoers.sh
teuthology.openstack =
  archive-key
  archive-key.pub
  openstack-centos-6.5-user-data.txt
  openstack-centos-7.0-user-data.txt
  openstack-centos-7.1-user-data.txt
  openstack-centos-7.2-user-data.txt
  openstack-debian-8.0-user-data.txt
  openstack-opensuse-42.1-user-data.txt
  openstack-teuthology.cron
  openstack-teuthology.init
  openstack-ubuntu-12.04-user-data.txt
  openstack-ubuntu-14.04-user-data.txt
  openstack-user-data.txt
  openstack.yaml
  setup-openstack.sh

[options.entry_points]
console_scripts =
  teuthology = scripts.run:main
  teuthology-openstack = scripts.openstack:main
  teuthology-nuke = scripts.nuke:main
  teuthology-suite = scripts.suite:main
  teuthology-ls = scripts.ls:main
  teuthology-worker = scripts.worker:main
  teuthology-lock = scripts.lock:main
  teuthology-schedule = scripts.schedule:main
  teuthology-updatekeys = scripts.updatekeys:main
  teuthology-update-inventory = scripts.update_inventory:main
  teuthology-results = scripts.results:main
  teuthology-report = scripts.report:main
  teuthology-kill = scripts.kill:main
  teuthology-queue = scripts.queue:main
  teuthology-prune-logs = scripts.prune_logs:main
  teuthology-describe = scripts.describe:main
  teuthology-reimage = scripts.reimage:main
  teuthology-dispatcher = scripts.dispatcher:main
  teuthology-wait = scripts.wait:main
