[metadata]
name = teuthology
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/ceph/teuthology
author = Red Hat, Inc.
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Topic :: System :: Distributed Computing
    Topic :: System :: Filesystems
description_content_type = text/x-rst; charset=UTF-8
description_file = README.rst
keywords = teuthology, test, ceph, cluster
summary = Ceph test framework

[options]
packages = find:
install_requires =
    PyYAML
    ansible>=2.10,<3.0
    apache-libcloud
    argparse>=1.2.1
    backports.ssl-match-hostname
    beanstalkc3>=0.4.0
    configobj
    configparser
    docopt
    gevent
    httplib2
    humanfriendly
    lupa
    ndg-httpsclient
    netaddr
    paramiko
    pexpect
    pip-tools
    prettytable
    psutil>=2.1.0
    pyasn1
    pynacl>=1.5.0
    pyopenssl>=0.13
    python-dateutil
    python-novaclient
    python-openstackclient
    requests>2.13.0
    sentry-sdk
python_requires = >=3.6

[options.entry_points]
console_scripts =
    teuthology = scripts.run:main
    teuthology-openstack = scripts.openstack:main
    teuthology-nuke = scripts.nuke:main
    teuthology-suite = scripts.suite:main
    teuthology-ls = scripts.ls:main
    teuthology-worker = scripts.worker:main
    teuthology-lock = scripts.lock:main
    teuthology-schedule = scripts.schedule:main
    teuthology-updatekeys = scripts.updatekeys:main
    teuthology-update-inventory = scripts.update_inventory:main
    teuthology-results = scripts.results:main
    teuthology-report = scripts.report:main
    teuthology-kill = scripts.kill:main
    teuthology-queue = scripts.queue:main
    teuthology-prune-logs = scripts.prune_logs:main
    teuthology-describe = scripts.describe:main
    teuthology-reimage = scripts.reimage:main
    teuthology-dispatcher = scripts.dispatcher:main
    teuthology-wait = scripts.wait:main

[options.extras_require]
manhole =
    manhole
rocketchat =
    rocket-python>=1.2.15
sentry =
    sentry-sdk
test =
    PyJWT
    boto>=2.0b4
    boto3
    cryptography>=2.7
    ipy
    mock
    nose
    pytest
    toml
    tox
    xmltodict

[options.package_data]
teuthology.openstack =
    archive-key
    archive-key.pub
    openstack-centos-6.5-user-data.txt
    openstack-centos-7.0-user-data.txt
    openstack-centos-7.1-user-data.txt
    openstack-centos-7.2-user-data.txt
    openstack-debian-8.0-user-data.txt
    openstack-opensuse-42.1-user-data.txt
    openstack-teuthology.cron
    openstack-teuthology.init
    openstack-ubuntu-12.04-user-data.txt
    openstack-ubuntu-14.04-user-data.txt
    openstack-user-data.txt
    openstack.yaml
    setup-openstack.sh
teuthology.suite =
    fragment-merge.lua
teuthology.task.install =
    adjust-ulimits
    daemon-helper
teuthology.task.internal =
    edit_sudoers.sh
