[metadata]
name = teuthology
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/ceph/teuthology
author = Red Hat, Inc.
license = MIT
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Topic :: System :: Distributed Computing
    Topic :: System :: Filesystems
description_content_type = text/x-rst; charset=UTF-8
description_file = README.rst
keywords = teuthology, test, ceph, cluster
summary = Ceph test framework

[options]
python_requires = >=3.10
packages = find:
install_requires =
    PyYAML
    ansible-core==2.17.7
    apache-libcloud
    backports.ssl-match-hostname
    beanstalkc3>=0.4.0
    configobj
    configparser
    docopt
    gevent
    httplib2
    humanfriendly
    lupa
    lxml
    ndg-httpsclient
    netaddr
    openstacksdk # teuthology-openstack dependencies
    paramiko
    pexpect
    pip-tools
    prettytable
    prometheus_client>=0.16.0
    psutil>=2.1.0
    pyasn1
    pynacl>=1.5.0
    pyopenssl>=0.13
    python-dateutil
    requests>2.13.0
    sentry-sdk
    sshtunnel
    types-psutil
    urllib3>=1.25.4,<1.27  # For botocore
scripts =
    teuthology/task/install/bin/adjust-ulimits
    teuthology/task/install/bin/daemon-helper
    teuthology/task/install/bin/stdin-killer

[options.entry_points]
console_scripts =
    teuthology = scripts.run:main
    teuthology-openstack = scripts.openstack:main
    teuthology-suite = scripts.suite:main
    teuthology-ls = scripts.ls:main
    teuthology-worker = scripts.worker:main
    teuthology-lock = scripts.lock:main
    teuthology-schedule = scripts.schedule:main
    teuthology-updatekeys = scripts.updatekeys:main
    teuthology-update-inventory = scripts.update_inventory:main
    teuthology-results = scripts.results:main
    teuthology-report = scripts.report:main
    teuthology-kill = scripts.kill:main
    teuthology-queue = scripts.queue:main
    teuthology-prune-logs = scripts.prune_logs:main
    teuthology-describe = scripts.describe:main
    teuthology-reimage = scripts.reimage:main
    teuthology-dispatcher = scripts.dispatcher:main
    teuthology-wait = scripts.wait:main
    teuthology-exporter = scripts.exporter:main
    teuthology-node-cleanup = scripts.node_cleanup:main
    teuthology-supervisor = scripts.supervisor:main

[options.extras_require]
manhole =
    manhole
rocketchat =
    rocket-python>=1.2.15
sentry =
    sentry-sdk
test =
    PyJWT
    boto>=2.0b4
    boto3
    coverage
    ipy
    mock
    pynose
    pytest
    pytest-cov
    toml
    tox
    xmltodict
# libcloud openstack dependencies
openstack =
    python-openstackclient
    python-novaclient

[options.package_data]
teuthology.openstack =
    archive-key
    archive-key.pub
    openstack-centos-6.5-user-data.txt
    openstack-centos-7.0-user-data.txt
    openstack-centos-7.1-user-data.txt
    openstack-centos-7.2-user-data.txt
    openstack-debian-8.0-user-data.txt
    openstack-opensuse-42.1-user-data.txt
    openstack-teuthology.cron
    openstack-teuthology.init
    openstack-ubuntu-12.04-user-data.txt
    openstack-ubuntu-14.04-user-data.txt
    openstack-user-data.txt
    openstack.yaml
    setup-openstack.sh
teuthology.suite =
    fragment-merge.lua
teuthology.task.install =
    bin/adjust-ulimits
    bin/daemon-helper
    bin/stdin-killer
teuthology.task.internal =
    edit_sudoers.sh

[options.packages.find]
exclude =
    teuthology.test
    teuthology.test.*
    teuthology.lock.test
    teuthology.task.tests
    teuthology.openstack.test
    teuthology.orchestra.test
    teuthology.orchestra.test.*

[flake8]
max-line-length = 100
